fix font color for dropped top  menu on mobile

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 /*
-  top-nav-bar Mobile////////
+  Start top-nav-bar Mobile////////
 */
 
 .nav-flex-container {
@@ -60,6 +60,33 @@ body {
   padding-top: 5%;
 }
 
+.nav-list-top {
+  display: none;
+}
+
+.nav-list-top-dropMobile {
+  position: fixed;
+  /*delete below after debuggin*/
+  border: 2px solid red;
+  background: rgba(32, 29, 206, 0.6);
+  backdrop-filter: blur(5px);
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  margin-top: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+
+.nav-list__options {
+  text-decoration: none;
+  color: white;
+}
+
+
+/*
+  Ends top navigation bar
 /*
   introduction text container///////
 */
@@ -436,22 +463,8 @@ contact me section
 }
 
 /*
-desktop version
+desktop version start here;
 */
-
-.nav-list-top {
-  display: block;
-  width: 100%;
-  list-style: none;
-  justify-content: space-between;
-}
-
-
-
-.nav-list-top a {
-  text-decoration: none;
-  color: currentColor;
-}
 
 /*
 media queries Below
@@ -478,8 +491,15 @@ media queries Below
     width: 100%;
     padding-right: 10%;
     padding-left: 45%;
+    list-style: none;
+    justify-content: space-between;
     box-sizing: border-box;
   }
+
+  .nav-list__options {
+    color: #344563;
+  }
+  
 
   .nav-flex-container {
     height: 72px;
